--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -342,7 +342,7 @@
         </div>
     </footer>
 
-    <script src="js/app.js"></script>
+    <script src="js/app.js?v=2"></script>
 
     <!-- Service Worker Registration -->
     <script>
